Fix: Fix header on main chat room not aligned Made sure the need of position fixed is not required to position the header because everyone is setting thier own top position value and keeps breaking the layout

--- a/packages/ui/src/message-room-view-header/message-room-view-header.module.css
+++ b/packages/ui/src/message-room-view-header/message-room-view-header.module.css
@@ -1,15 +1,14 @@
 .plugin__header {
   /* width: inherit; */
-  height: 44px;
+  height: 42px;
   background-color: #00b87c;
   color: #fff;
   box-sizing: border-box;
-  padding: 5px 16px;
+  padding: 3px 16px;
   display: flex !important;
   font-size: 10px;
   justify-content: space-between;
-  position: fixed;
-  top: 37.5px;
+
   width: 100%;
   z-index: 1;
 }
